--- a/definition.yml
+++ b/definition.yml
@@ -1,6 +1,6 @@
 id: monocle_ddrtree
-docker_repository: dynverse/dynmethods:monocle_ddrtree
-container_url: https://github.com/dynverse/dynmethods/tree/master/containers/monocle_ddrtree
+docker_repository: dynverse/ti_monocle_ddrtree
+container_url: https://github.com/dynverse/ti_monocle_ddrtree
 name: Monocle DDRTree
 type: algorithm
 implementation_id: monocle
