--- a/definition.yml
+++ b/definition.yml
@@ -3,7 +3,7 @@ docker_repository: dynverse/ti_monocle_ddrtree
 singularity_collection: 1555
 container_url: https://github.com/dynverse/ti_monocle_ddrtree
 name: Monocle DDRTree
-type: algorithm
+source: tool
 implementation_id: monocle
 platform: R
 doi: 10.1038/nmeth.4402
