--- a/definition.yml
+++ b/definition.yml
@@ -39,10 +39,7 @@ wrapper:
   - multifurcation
   - binary_tree
   - tree
-  example: /code/example.R
-  input_required:
-  - counts
-
+  input_required: counts
 
 parameters:
   - id: reduction_method
